<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="take_pic">Take picture</string>
    <string name="submit">Submit</string>
    <string name="description_hint">Write a description</string>
    <string name="go_to_feed">Go to feed</string>
    <string name="compose">Compose</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>